fix: correcciones en ClienteController y CloudUploadUtil + diagrama base de datos